# klonaudio

./: .gitignore  LICENSE  README.md  preprocessor_config.json  pyproject.toml  start.py  tokenizer_config.json
docs/: RELEASE_NOTES.md  VOICE_CLONING.md
docs/plans/: 2026-02-13-voice-cloning-design.md  2026-02-13-voice-cloning.md
examples/: basic_generation.py  voice_cloning.py
scripts/: create_voice.py
src/kugelaudio_open/: __init__.py  cli.py
src/kugelaudio_open/configs/: model_config.py
src/kugelaudio_open/models/: kugelaudio_inference.py  kugelaudio_model.py
src/kugelaudio_open/processors/: kugelaudio_processor.py
src/kugelaudio_open/ui/: app.py
src/kugelaudio_open/utils/: generation.py
src/kugelaudio_open/watermark/: watermark.py
tests/: _helpers.py  conftest.py  test_generation.py  test_integration.py  test_processor.py  test_voice_encoding.py
voices/: angry.pt  old_lady.pt  radio.pt  voices.json
